--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
 	"name": "@sheetbase/drive-server",
-	"type": "module",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "File management with Drive for Sheetbase backend app.",
 	"author": "Sheetbase",
 	"homepage": "https://sheetbase.net",
 	"license": "MIT",
 	"scripts": {
-		"build:code": "sheetbase-app-scripts build",
+		"build:code": "sheetbase-app-scripts build --param options",
 		"build:readme": "sheetbase-app-scripts readme",
 		"build:docs": "typedoc ./src --out ./docs --mode file --target ES6 --excludeExternals --excludeNotExported --ignoreCompilerErrors",
 		"build": "npm run build:code && npm run build:readme && npm run build:docs",
@@ -27,11 +26,11 @@
 		"url": "https://github.com/sheetbase/module-drive-server/issues"
 	},
 	"dependencies": {
-		"@sheetbase/core-server": "0.0.4",
-		"@sheetbase/md5-server": "2.10.0"
+		"@sheetbase/md5-server": "^2.10.0-1"
 	},
 	"devDependencies": {
-		"@sheetbase/app-scripts": "0.0.7",
+		"@sheetbase/app-scripts": "0.0.14",
+		"@sheetbase/core-server": "0.0.5",
 		"@types/google-apps-script": "0.0.28"
 	}
 }
