--- a/package.json
+++ b/package.json
@@ -1,36 +1,57 @@
 {
-	"name": "@sheetbase/drive-server",
-	"version": "0.0.3",
-	"description": "File management with Drive for Sheetbase backend app.",
-	"author": "Sheetbase",
-	"homepage": "https://sheetbase.net",
-	"license": "MIT",
-	"scripts": {
-		"build:code": "sheetbase-app-scripts build --param options",
-		"build:readme": "sheetbase-app-scripts readme",
-		"build:docs": "typedoc ./src --out ./docs --mode file --target ES6 --excludeExternals --excludeNotExported --ignoreCompilerErrors",
-		"build": "npm run build:code && npm run build:readme && npm run build:docs",
-		"push": "sheetbase-app-scripts push"
-	},
-	"keywords": [
-		"google-apps-script",
-		"sheetbase",
-		"drive",
-		"file"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/sheetbase/drive-server.git"
-	},
-	"bugs": {
-		"url": "https://github.com/sheetbase/drive-server/issues"
-	},
-	"dependencies": {
-		"@sheetbase/md5-server": "^2.10.0-1"
-	},
-	"devDependencies": {
-		"@sheetbase/app-scripts": "0.0.14",
-		"@sheetbase/core-server": "0.0.5",
-		"@types/google-apps-script": "0.0.28"
-	}
+   "name": "@sheetbase/drive-server",
+   "version": "0.0.3",
+   "description": "File management with Drive for Sheetbase backend app.",
+   "author": "Sheetbase",
+   "homepage": "https://sheetbase.net",
+   "license": "MIT",
+   "main": "dist/bundles/sheetbase-drive-server.umd.js",
+   "module": "dist/fesm3/sheetbase-drive-server.js",
+   "typings": "dist/sheetbase-drive-server.d.ts",
+   "files": [
+      "dist"
+   ],
+   "scripts": {
+      "module": "sheetbase-app-scripts build",
+      "readme": "sheetbase-app-scripts readme",
+      "docs": "sheetbase-app-scripts docs",
+      "build": "npm run module && npm run readme && npm run docs && npm run transpile-test",
+      "deploy": "sheetbase-app-scripts deploy",
+      "lint": "tslint --project tslint.json && echo 'No lint errors.'",
+      "transpile-test": "tsc --project tests/tsconfig.test.json",
+      "test": "nyc --cache false mocha --timeout 100000 -- tests/out-tsc/tests/*.js",
+      "coverage": "nyc --cache false report --reporter=text-lcov | coveralls"
+   },
+   "keywords": [
+      "google-apps-script",
+      "sheetbase",
+      "drive",
+      "file"
+   ],
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/sheetbase/drive-server.git"
+   },
+   "bugs": {
+      "url": "https://github.com/sheetbase/drive-server/issues"
+   },
+   "dependencies": {
+      "@sheetbase/core-server": "0.0.12",
+      "blueimp-md5": "^2.10.0"
+   },
+   "devDependencies": {
+      "@sheetbase/app-scripts": "0.0.26",
+      "@types/chai": "^4.1.7",
+      "@types/google-apps-script": "0.0.28",
+      "@types/mocha": "^5.2.5",
+      "@types/node": "^10.12.2",
+      "chai": "^4.2.0",
+      "coveralls": "^3.0.2",
+      "mocha": "^5.2.0",
+      "nyc": "^13.1.0",
+      "rollup-plugin-commonjs": "^9.2.0",
+      "rollup-plugin-node-resolve": "^3.4.0",
+      "tslint": "^5.11.0",
+      "typescript": "^3.1.6"
+   }
 }
