--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@sheetbase/drive-server",
-   "version": "0.0.6",
+   "version": "0.0.7",
    "description": "File management with Drive for Sheetbase backend app.",
    "author": "Sheetbase",
    "homepage": "https://sheetbase.net",
@@ -40,20 +40,22 @@
       "blueimp-md5": "^2.10.0"
    },
    "peerDependencies": {
-      "@sheetbase/core-server": "0.0.13"
+      "@sheetbase/core-server": "0.0.19"
    },
    "devDependencies": {
-      "@sheetbase/app-scripts": "0.0.28",
+      "@sheetbase/app-scripts": "^0.0.28",
       "@types/chai": "^4.1.7",
-      "@types/google-apps-script": "0.0.32",
+      "@types/google-apps-script": "^0.0.32",
       "@types/mocha": "^5.2.5",
       "@types/node": "^10.12.8",
+      "@types/sinon": "^5.0.7",
       "chai": "^4.2.0",
       "coveralls": "^3.0.2",
       "mocha": "^5.2.0",
       "nyc": "^13.1.0",
       "rollup-plugin-commonjs": "^9.2.0",
       "rollup-plugin-node-resolve": "^3.4.0",
+      "sinon": "^7.1.1",
       "tslint": "^5.11.0",
       "typescript": "^3.1.6"
    }
