--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@sheetbase/drive",
-   "version": "1.0.0-rc.0",
+   "version": "1.0.0",
    "description": "File management with Drive for Sheetbase backend app.",
    "author": "Sheetbase",
    "homepage": "https://sheetbase.net",
@@ -40,14 +40,13 @@
       "url": "https://github.com/sheetbase/drive/issues"
    },
    "dependencies": {
-      "blueimp-md5": "^2.10.0",
-      "@sheetbase/server": "^1.0.0-rc.0"
+      "blueimp-md5": "^2.10.0"
    },
    "peerDependencies": {
-      "@sheetbase/server": "^1.0.0-rc.0"
+      "@sheetbase/server": "^1.0.0"
    },
    "devDependencies": {
-      "@sheetbase/app-scripts": "^1.0.0-rc.0",
+      "@sheetbase/app-scripts": "^1.0.0",
       "@types/chai": "^4.1.7",
       "@types/google-apps-script": "^0.0.44",
       "@types/mocha": "^5.2.6",
